--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=1.0, user-scalable=no" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>My Quote Page</title>
     <link href="./css/style.css" rel="stylesheet" type="text/css" />
     
@@ -17,7 +17,7 @@
 
             <article class="quote_article">
                     <p class="quote"></p>
-                    <p class="author"></p>
+                    <small class="author"></small>
              
             </article>
 
